--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,11 @@
 *{
 	padding: 0;
 	margin: 0;
-	
+	border: 1px solid;
 }
 
 .cabecalho{
-	margin: auto 0;
+	
 	
 }
 
@@ -50,7 +50,7 @@
 
 
 .navegacao{
-	padding-right: 0;
+	
 	margin-top: 8px;
 }
 
@@ -61,13 +61,10 @@
 	margin-bottom: 0;
 }
 #movelmenu{
-	padding-right: 0;
 	border-color: #fff;
 }
 
-.container-menu{
-	padding-right: 0;
-}
+
 
 div#movelmenu ul.nav li a{
 	color: #38c3e0;
@@ -100,13 +97,22 @@ div.slide{
 
 
 @media screen and (min-width: 992px) {
-    .cabecalho {
-        margin: auto 13%;
     
-	}
 
 	.right{
 		float: right;
+	}
+
+	.navegacao{
+		padding-right: 0;
+	}
+
+	#movelmenu{
+		padding-right: 0;
+	}
+
+	nav.menu div.container-fluid {
+    	padding-right: 0px;
 	}
 
 
@@ -122,6 +128,8 @@ div.slide{
 	.right{
 		float: right;
 	}
+
+	
 
 
 }
@@ -145,6 +153,7 @@ div.slide{
 		color: #fff;
 	
 	}
+	
 
 
 
