--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 *{
 	padding: 0;
 	margin: 0;
-	border: 1px solid;
+	
 }
 
 .cabecalho{
@@ -93,6 +93,48 @@ div#movelmenu ul.nav li:hover a{
 
 div.slide{
 	margin-top: 1%;
+}
+
+div.redes-sociais{
+	width: 130px;
+	margin: auto;
+}
+
+div.redes-sociais a{
+	display: inline-block;
+    border: 1px solid black;
+    width: 38px;
+    height: 38px;
+    background-image: url(../img/redes.png);
+}
+div.redes-sociais a:hover{
+	transition-duration: 0.2s;
+}
+
+a.facebook{
+    background-position: -14px -14px;
+}
+
+
+a.facebook:hover{
+	background-position: -14px -54px;
+}
+
+a.instagram{
+    background-position: -60px -14px;
+    margin: auto 3px;
+}
+
+a.instagram:hover{
+	background-position: -60px -54px;
+}
+
+a.twiter{
+    background-position: -106px -14px;
+}
+
+a.twiter:hover{
+	background-position: -106px -54px;
 }
 
 
