--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,22 @@
+@charset "utf-8";
+@font-face{
+	font-family: 'Swis721BtRoman';
+	src: url("fonts/tt0003m_.ttf");
+}
+@font-face{
+	font-family: 'Swis721CnBtRoman';
+	src: url("fonts/tt0009m_.ttf");
+}
+@font-face{
+	font-family: 'Swis721BlkCnBtRoman';
+	src: url("fonts/tt0173m_.ttf");
+}
+
+*{
+	padding: 0;
+	margin: 0;
+}
+
 div.item img{
 	width: 100%;
 }
@@ -6,16 +25,37 @@ div.carousel-inner{
 	max-height: 500px;
 }
 
-div.ajuda{
-	margin: 15px auto;
+div{
+	margin: 15px;
 }
 
-div.ajuda div#quero-ajudar a div{
+
+div div#quero-ajudar a div{
 	background-color: #a8d26b;
-	width: 100%;
-	
+	padding: 12%;
 }
-div.ajuda div#preciso-ajuda a div{
+div div#preciso-ajuda a div{
 	background-color: #38c3e0;
-  	width: 100%;
+	padding: 12%;
 }
+div div a div span{
+	font-family: 'Swis721BlkCnBtRoman';
+	color: #fff;
+	font-weight: bold;
+	font-size: 30px;
+	border-bottom: 1px dashed;
+	padding: 10px;
+}
+
+@media screen and (min-device-width: 320px) and (max-device-width: 767px) {
+	div div a div span{
+		font-size: 19px;
+		border-bottom: 1px dashed;
+		padding: 5px;
+	}
+	div div#preciso-ajuda a div{
+		margin: 10px auto;
+	}
+
+}
+
