--- a/css/painel.css
+++ b/css/painel.css
@@ -21,87 +21,35 @@
   font-style: normal;
 }
 
-
-
-
-.form-login{    
-	font-family: 'Swiss721BT-Roman';
-  border: 1px solid #fff;
-  margin-left: 10%;
-  width: 62%;
-  background-color: #f2f1f1;
-  padding: auto;
-  margin-top: 10%;
+.conteudo {
+  margin: 3% 1% 17% 0;
 }
-
-.form-login form{
-  margin: 3% 6%;
-  position: relative;
-}
-
-.form-login form input {
-  width: 100%;
-  height: 50px;
-}
-
-.form-login form a.esqueci-senha{
-  font-family: 'Swiss721BT-Roman';
-  font-size: 16px;
+.conteudo aside p,
+.conteudo aside p a{
+	font-size: 14px;
   color: #b4b4b4;
-  position: absolute;
-  right: 0;
+  font-family: 'Swiss721BT-Roman';
 }
-
-.form-login form label {
-  color:#818181;
-  font-size: 20px;
-}
-
-.form-login form button {
-  width: 34%;
-  font-size: 16px;
-  height: 44px;
-  background-color: #38c3e0;
-  border: #38c3e0;
-  color: #fff;
+.conteudo aside span{
+  color: #38c3e0;
+  font-weight: 800;
+  font-size: 26px;
   text-transform: uppercase;
+  font-family: 'Swiss721BT-RomanCondensed';
 }
 
-.form-login div.click-cadastrar{
-	margin-top: 90px;
-  background-color: #a2a3a3;
-}
 
-.form-login div.click-cadastrar p{
-	text-transform: uppercase;
-	color: #fff;
-	text-align: center;
-	margin-bottom: 0;
-  padding: 3%;
-}
-
-.form-login div.click-cadastrar p a{
-	text-decoration:none;
-	color: #fff;
-}
 
 @media screen and (min-width: 992px) {
 
 }
 
 @media screen and (min-device-width: 768px) and (max-device-width: 991px) { 
-	.form-login {
-	    margin: auto;
-	} 
+
 
 }
 
 @media screen and (min-device-width: 320px) and (max-device-width: 767px) { 
-	.form-login {
-	    margin: auto;
-	} 
-	.form-login {
-	    width: 100%;
-	}
+
 }
 
